--- a/index.html
+++ b/index.html
@@ -176,8 +176,12 @@
             font-size: 30px;
 
             width: 100%;
+        }
 
-
+        table {
+            font-size: 15px;
+            margin-top: 20px;
+            border-top: 1px solid black;
         }
     }
 </style>
