--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcular IMC</title>
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
@@ -89,101 +90,6 @@
 
     <script src="index.js"></script>
 </body>
-<style>
-    html {
-        background-color: lightblue;
 
-    }
-
-    .formImc {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: column;
-        gap: 10px;
-
-    }
-
-    .formImc input {
-        width: 200px;
-        height: 50px;
-        font-size: large;
-        text-align: center;
-        font-family: 'Courier New';
-
-    }
-
-    .formImc input[type="submit"] {
-        border: none;
-        background-color: rgb(90, 189, 228);
-        font-size: 20px;
-    }
-
-
-    .formImc label {
-        font-size: 20px;
-        margin-top: 20px;
-        text-transform: uppercase;
-        font-family: 'Courier New';
-    }
-
-    .resultado {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: column;
-    }
-
-    #resultado {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        font: 1em 'Courier New';
-        font-size: 35px;
-        background-color: lightskyblue;
-        border: 1px solid black;
-        margin-top: 0px;
-        width: 60%;
-        margin-bottom: 8px;
-
-
-        transition: 0.5s;
-        color: white;
-    }
-
-    table {
-        background-color: transparent;
-        font-size: 20px;
-        border: 1px solid black;
-    }
-
-
-
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-
-    }
-
-    .table-calc {
-        width: 100%;
-        max-width: 600px;
-    }
-
-    @media (max-width: 900px) {
-        #resultado {
-            font-size: 30px;
-
-            width: 100%;
-        }
-
-        table {
-            font-size: 15px;
-            margin-top: 20px;
-            border-top: 1px solid black;
-        }
-    }
-</style>
 
 </html>
